--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,21 @@
         android:theme="@style/Theme.ServicosGerais"
         tools:targetApi="31">
         <activity
+            android:name=".ServicoItemClienteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CadastroEnderecoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TelaClienteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CadastroServicoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CadastroActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="true" />
         <activity
