--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.ServicosGerais"
         tools:targetApi="31">
         <activity
+            android:name=".TelaFornecedorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditarEnderecoActivity"
+            android:exported="false" />
+        <activity
             android:name=".ServicoItemClienteActivity"
             android:exported="false" />
         <activity
